刪除過時的 OpenAPI 文檔及相關 HTML 文件，更新教師管理面板標題以反映正確的學校名稱。

--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -91,7 +91,7 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col-md-8">
-            <h1><i class="fas fa-chalkboard-teacher me-3"></i>DeinClassAI 教師管理面板</h1>
+            <h1><i class="fas fa-chalkboard-teacher me-3"></i>DeinClassAI 德音國小 教師管理面板</h1>
             <p class="mb-0">管理學生 AI 權限，監控使用狀況，控制學習成本</p>
           </div>
           <div class="col-md-4 text-end">
